<resources>
    <string name="app_name" translatable="false">TourExperience</string>
    <string-array name="welcome_descriptions">
        <item>Discover the works of art you love the most around the world!</item>
        <item>View information on the works via a simple QR code!</item>
        <item>Have fun with lots of great mini-games!</item>
        <item>Access the application to take advantage of many features</item>
    </string-array>
    <string name="skip">Skip</string>
    <string name="later">I prefer to log in later</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello %1$s!</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter your password</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_surname">Enter your surname</string>
    <string name="enter_date_birth">Enter your birth date</string>
    <string name="msg_psw_without_space">Your password cannot contain spaces </string>
    <string name="msg_different_psw">Your passwords do not match</string>
    <string name="psw_too_short">Password field has less than , %1$d characters</string>
    <string name="field_empty">%1$s field is empty </string>
    <string name="field_too_long">%1$s field contains more than, %2$d characters</string>
    <string name="valid_number">Enter a valid number</string>
    <string name="correct_age">The age should be between, %1$d and, %2$d</string>
    <string name="valid_email">Enter a valid email</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="home" translatable="false">Home</string>
    <string name="visits_history">Routes history</string>
    <string name="museums">Museums</string>
    <string name="stats">Games stats</string>
    <string name="museums_cloud_import">Select Path to import</string>
    <string name="game_statistics">Game statistics</string>
    <string name="search_hint">Rome, Egyptian museum, …</string>
    <string name="search_museums">Search by name or city…</string>
    <string name="search_paths">Search by name or museum…</string>
    <string name="find_cultural_site">Find a cultural site</string>
    <string name="search_description">Discover and follow the routes\nyou like best!</string>
    <string name="modifyProfile">Modify</string>
    <string name="confirmModifyProfile">Confirm</string>
    <string name="emailLabelProfile">Email</string>
    <string name="nameLabelProfile">Name</string>
    <string name="surnameLabelProfile">Surname</string>
    <string name="birthLabelProfile">Date of birth</string>
    <string name="residenceLabelProfile">Residence</string>
    <string name="click_here">Click here</string>
    <string name="favorites_routes">Favorites routes</string>
    <string name="favorites_routes_here">Here you can find your favorites routes</string>
    <string name="failed_registration">Failed registration</string>
    <string name="success_registration">Success registration</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="credentials_not_accepted">Email and password are not allowed</string>
    <string name="name_not_valid">Name not valid</string>
    <string name="surname_not_valid">Surname not valid</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="bithDate_not_valid">Birth date not valid</string>
    <string name="logged_in">Logged in</string>
    <string name="failed_to_log">Failed log in</string>
    <string name="username_required">Username required</string>
    <string name="password_required">Password required</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create a new account</string>
    <string name="login_guest">Login as guest</string>
    <string name="unacceptable_date_birth">Unacceptable date of birth (min 12 years old)</string>
    <string name="email_already_use">Email already in use by another account</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="string_or">or</string>
    <string name="profile_change_success">Profile edit successfully</string>
    <string name="profile_change_error">Profile edit error</string>
    <string name="insert_password_for_confirm_title">Insert password</string>
    <string name="insert_password_for_confirm_body">Insert password for confirm your change</string>
    <string name="insert_password_for_confirm_button">Confirm</string>
    <string name="no_result_1">Click the + button in museums</string>
    <string name="no_result_2">to import a new museum route</string>
    <string name="empty_phrase" translatable="false" />
    <string name="import_paths_from_internet">Import from Internet</string>
    <string name="import_paths_from_local">Import from local</string>
    <string name="camera_permission_required">Camera permission is require for scan a qr code</string>
    <string name="game_stats_not_available">Game stats not available. Login first.</string>
    <string name="permission_required_title">Permission request</string>
    <string name="permission_required_body">
        Dear user, you must grant this permission
        to continue using this feature.
    </string>
    <string name="permission_denied_title">Permission denied</string>
    <string name="permission_denied_body">
        Dear user, having denied permission to the application
        you won’t be able to access this feature, but you can continue
        however to use the other features.
    </string>
    <string name="importa">Import</string>
    <string name="importa_msg">Do you really want to import this path of the museum</string>
    <string name="SI">Yes</string>
    <string name="NO">Cancel</string>
    <string name="do_not_show_again_local_import" translatable="false">do_not_show_again</string>
    <string name="local_import_dialog_title">Explanation Import</string>
    <string name="local_import_message">
        It is possible to import only .zip and .json. Zip files must be structured according to the TourExperience rules.
        Any non-compliant .zip or .json file will be rejected. The .zip and .json files must be UTF-8 encoded.
        \nThanks.
    </string>
    <string name="do_not_show_again">OK &amp; do not show again</string>
    <string name="path_from_cloud_empty">There is _ routes to import</string>
    <string name="available_routes">Available routes</string>
    <string name="available_rooms">Available rooms</string>
    <string name="nearby_areas">Nearby areas</string>
    <string name="museum">Museum: %1$s</string>
    <string name="path">Path: %1$s</string>
    <string name="area">Area: %1$s</string>
    <string name="vote">Vote: %1$s</string>
    <string name="no_connection">There is no internet connection</string>
    <string name="no_connection_saved_score">There is no internet connection but the score has been saved</string>
    <string name="importing_ruote">Importing the selected route…</string>
    <string name="mime_type_error">The selected file is not of the expected type</string>
    <string name="json_import_error">Incorrect %1$s route!</string>
    <string name="json_import_success">Route %1$s imported!</string>
    <string name="zip_import_error">Incorrect %1$s zip!</string>
    <string name="zip_import_success">Zip %1$s imported!</string>
    <string name="delete_museum_title">Delete %1$s?</string>
    <string name="delete_museum_message">Are you sure you want to delete this museum and all associated routes?</string>
    <string name="museum_deleted">Museum %1$s deleted</string>
    <string name="start">Start</string>
    <string name="error_room_title">Wrong room</string>
    <string name="error_opera_title">Wrong opera</string>
    <string name="error_room_body">The clicked room does not correspond to the next expected room on the selected route</string>
    <string name="error_opera_body">The clicked opera does not correspond to any opera in this room</string>
    <string name="path_end">End of the path</string>
    <string name="rate_path">End path\n Give a vote!!!</string>
    <string name="path_end_success">End path success</string>
    <string name="path_end_fail">End path fail</string>
    <string name="bluetooth_permission_title" translatable="false">Bluetooth Low Energy</string>
    <string name="bluetooth_permission_body">Accepting this permission you can use Bluetooth Low Energy to detect the operas nearest you! Don\'t worry, we don\'t use any data related your position.</string>
    <string name="download_in_progress">Download in progress, please wait…</string>
    <string name="download_successful">%1$s, from the %2$s museum, downloaded successfully!</string>
    <string name="download_failed">Download failed</string>
    <string name="msg_share">Hey, look what path I made</string>
    <string name="try_again">Try again</string>
    <string name="attention">Attention!</string>
    <string name="msg_attention">It was not possible register your vote because there is no internet connection</string>
    <string name="title_classifica_voti">Best paths</string>
    <string name="description_classifica_voti">Ranking of the paths present in the app that had a better review by the different users who made them</string>
    <string name="title_classifica_visitati">Most visited paths</string>
    <string name="description_classifica_visitati">Ranking of the most visited paths that were visited most by users</string>
    <string name="rankings">Rankings</string>
    <string name="value">Value:</string>
    <string name="no_value">No value</string>
    <string name="no_rating">No rating</string>
    <string name="pos">Position: %1$s</string>
    <string name="share">Share</string>
    <string name="interrupt">Do you really want to interrupt the path?</string>
    <string name="end_path">End path</string>
    <string name="quiz_incompatibile">Incompatible quiz</string>
    <string name="termina">Finish</string>
    <string name="ripeti_quiz">Repeat quiz</string>
    <string name="conferma">Confirm</string>
    <string name="quiz_non_completato">Quiz not completed</string>
    <string name="quiz_score">%1$d/%2$d Accumulated points</string>
    <string name="quiz_total">%1$d Points</string>
    <string name="quiz_total_plus_error">%1$d Points. -1 for each error</string>
    <string name="generic_error">An error has occurred</string>
    <string name="quiz_question">%1$d. %2$s</string>
    <string name="continua">Continue</string>
    <string name="quiz_import_message">
        It is possible to import only a .json file. Json file must be structured according to the TourExperience quiz rules.
        Any non-compliant .json file will be rejected. The .json file must be UTF-8 encoded.
    </string>
    <string name="quiz_score_saved">Quiz score saved successfully</string>
    <string name="quiz_score_not_saved">Quiz score not saved</string>
    <string name="quiz_score_guest_user">As a guest user, your score cannot be saved</string>
    <string name="file_json_importato">Json file imported successfully</string>
    <string name="quiz_import_request">There is no quiz for this work. Do you want to import a quiz?</string>
    <string name="importa_quiz">Import quiz</string>
    <string name="quiz_svolto">You have already completed this Quiz for this Path</string>
    <string name="errore_apertura_quiz">Error opening the quiz</string>
    <string name="scan_qr_code_opera">Scan the QR code of an opera</string>
    <string name="operas_close_to_you">Operas close to you</string>
    <string name="operas_you_will_find">Operas you will find</string>
    <string name="login_test">TEST LOGIN</string>
</resources>