<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.HomeFragment"
    android:id="@+id/home_fragment">

    <!-- Search -->
    <TextView
        android:id="@+id/search_text_view"
        android:text="@string/find_cultural_site"
        style="@style/heading_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <AutoCompleteTextView
        android:id="@+id/autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:singleLine="true"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:hint="@string/search_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text_view"/>

    <!-- Scrollable favorites -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rankings_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_rounded"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autocomplete"
        android:layout_marginVertical="20dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/title_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rankings"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:paddingTop="20dp"
            app:layout_constraintBaseline_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/classifica_voti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardMaxElevation="8dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_ranking">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titolo_classifica_voti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_classifica_voti"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descrizione_classifica_voti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_classifica_voti"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintTop_toBottomOf="@id/titolo_classifica_voti"
                    android:layout_marginTop="5dp"
                    app:layout_constraintHorizontal_bias="0.1"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/classifica_visitai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardCornerRadius="8dp"
            app:cardMaxElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/classifica_voti">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titolo_classifica_visitati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_classifica_visitati"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descrizione_classifica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/description_classifica_visitati"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintTop_toBottomOf="@id/titolo_classifica_visitati" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>