<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".percorso.pagina_opera.QuizFragment"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/quiz_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/quiz_incompatibile"
                android:textAlignment="center"
                android:textColor="@color/main_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textColor="@color/main_red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/final_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/termina_quiz_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_blue"
                    android:text="@string/termina"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/ripeti_quiz_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main_blue"
                    android:text="@string/ripeti_quiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linear_layout_quiz"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/conferma_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/main_blue"
                android:text="@string/conferma"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>